--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://ecamacho.github.io/myblog/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 publishDir = "docs"
