--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,33 @@ jobs:
           name: "Run Hugo"
           command: HUGO_ENV=production hugo -v -s ~/project/
 
+  deploy-job:
+    docker:
+      - image: cibuilds/hugo:latest
+    working_directory: ~/project
+    steps:
+      - checkout
+      - run:
+          name: "Run Hugo"
+          command: HUGO_ENV=production hugo -v -s ~/project/
+      - add_ssh_keys
+      - run:
+          name: Push to git
+          command: |
+            git config --global user.email "ecamacho.mx@gmail.com"
+            git config --global user.name "CircleCI"
+            git add docs/
+            git commit -m "Release"
+            git push origin master
+
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build-job
+      - deploy-job:
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
